<resources>
    <string name="app_name">굿로드</string>
    <string name="app_main_activity_title">로드킬 신고 등록</string>
    <string name="app_main_activity_title_for_report">로드킬 신고 등록</string>

    <string name="camera_caution">당신의 안전부터 확인하세요.</string>
    <string name="camera_caution_detail">갓길, 가드레일 확인 후\n안전한 곳에서 신고하세요.</string>
    <string name="navigation_drawer_open">공지사항 열기</string>
    <string name="navigation_drawer_close">공지사항 닫기</string>
    <string name="activity_title_notice">공지사항</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_roadkill_method">로드킬 대처방법</string>
    <string name="menu_roadkill_manual">로드킬 대처 매뉴얼</string>
    <string name="menu_roadkill_phone">신고전화</string>
    <string name="menu_introduction">서비스 소개</string>
    <string name="menu_news">굿로드 뉴스</string>

    <string name="report_info">신고정보</string>
    <string name="report_ect_1">에</string>
    <string name="report_ect_2">에서</string>

    <string name="report_more">상세 정보 입력</string>
    <string name="reporting">신고하기</string>
    <string name="report_detail">상세 정보 입력</string>
    <string name="report_group1">포유류</string>
    <string name="report_group2">양서류</string>
    <string name="report_group3">조류</string>
    <string name="report_group4">파충류</string>
    <string name="report_group1_1">개</string>
    <string name="report_group1_2">고라니</string>
    <string name="report_group1_3">고양이</string>
    <string name="report_group1_4">너구리</string>
    <string name="report_group1_5">노루</string>
    <string name="report_group1_6">다람쥐</string>
    <string name="report_group1_7">담비</string>
    <string name="report_group1_8">두더지</string>
    <string name="report_group1_9">멧돼지</string>
    <string name="report_group1_10">멧토끼</string>
    <string name="report_group1_11">삵</string>
    <string name="report_group1_12">수달</string>
    <string name="report_group1_13">족제비</string>
    <string name="report_group1_14">쥐</string>
    <string name="report_group1_15">청설모</string>
    <string name="report_group1_16">모르겠어요</string>
    <string name="report_group2_1">갈매기류</string>
    <string name="report_group2_2">까마귀류</string>
    <string name="report_group2_3">뀡류</string>
    <string name="report_group2_4">매류</string>
    <string name="report_group2_5">백로류</string>
    <string name="report_group2_6">수리류</string>
    <string name="report_group2_7">오리류</string>
    <string name="report_group2_8">올빼미류</string>
    <string name="report_group2_9">참새류</string>
    <string name="report_group2_10">모르겠어요</string>
    <string name="report_group3_1">개구리</string>
    <string name="report_group3_2">도롱뇽</string>
    <string name="report_group3_3">두꺼비</string>
    <string name="report_group3_4">모르겠어요</string>
    <string name="report_group4_1">거북이</string>
    <string name="report_group4_2">도마뱀</string>
    <string name="report_group4_3">뱀</string>
    <string name="report_group4_4">모르겠어요</string>

    <string name="btn_report">신고하기</string>
    <string name="report_group">신고하는 동물이 무엇입니까?</string>
    <string name="report_write">직접 작성할게요</string>


    <string name="btn_group_1">포유류</string>
    <string name="btn_group_2">파충류</string>
    <string name="btn_group_3">조류</string>
    <string name="btn_group_4">양서류</string>
    <string name="i_saw_roadkill">로드킬을 봤어요!</string>
    <string name="common_confirm">확인</string>
    <string name="common_no">아니오</string>
    <string name="common_yes">예</string>
    <string name="cancel_report">신고를 취소하시겠습니까?</string>
    <string name="btn_save">저장</string>
    <string name="saved_end_string">입니다.</string>
    <string name="copyright">ⓒ 녹색연합</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="report_summary">신고정보</string>
    <string name="thank_you_for_report">신고해주셔서\n감사합니다</string>
    <string name="btn_ok">확인</string>
    <string name="sending">전송중입니다...</string>
    <string name="sending_step_1">전송 준비 중...</string>
    <string name="sending_step_2">이미지 전송 중...</string>
    <string name="sending_step_3">내용 전송 중...</string>
    <string name="exit_activity">굿로드 앱을 종료하시겠습니까?</string>
    <string name="map_move_guide">지도의 위치를 움직여서 핀 위치를 지정할 수 있습니다.</string>
    <string name="report_complete_site_info">신고해주신 자료는 녹색연합에서 운영하는\n굿로드 웹사이트(goodroad.co.kr)에 반영됩니다.</string>
</resources>
