<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/btn_report"
        android:id="@+id/btn_report"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="#ecc904"
        android:textSize="20sp" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp"
        android:id="@+id/textView_time"
        android:layout_marginLeft="50dp" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_time"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:id="@+id/textView_location"
        android:layout_marginLeft="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/textView_location"
        android:layout_marginTop="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <CheckBox
            android:text="@string/btn_group_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox1"
            android:layout_weight="1" />
        <CheckBox
            android:text="@string/btn_group_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox2"
            android:layout_weight="1" />
        <CheckBox
            android:text="@string/btn_group_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox3"
            android:layout_weight="1" />
        <CheckBox
            android:text="@string/btn_group_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox4"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_above="@+id/btn_report"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="photo"
        android:id="@+id/btn_photo" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btn_photo"
        android:id="@+id/photo" />
</RelativeLayout>